Feature/6 (#8)
* add store for maintain server
* add create user api
* add POST users, GET user API
* Update docs
* Update Swagger
* change default list return value from nil to empty list
